--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
+pep8 = "*"
 
 [requires]
 python_version = "3.6"
